--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,7 @@
     <body>
         <div class="app">
             <h1>PhoneGap</h1>
+            <p> This is an example of some user text added to the default phonegap</p>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
