--- a/www/index.html
+++ b/www/index.html
@@ -28,10 +28,9 @@
     <body>
         <div class="app">
             <h1>PhoneGap</h1>
-            <p> This is an example of some user text added to the default phonegap</p>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+                <p class="event received">I got some stuff to work</p>
             </div>
         </div>
         <script type="text/javascript" src="phonegap.js"></script>
