--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,7 @@
     <body>
         <div class="app">
             <h1>PhoneGap</h1>
+            <button type="button">Click Me!</button>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">I got some stuff to work</p>
